--- a/index.html
+++ b/index.html
@@ -3,14 +3,32 @@
     
     <!-- Código omitido -->
     <body>
-        <div class="conteudo-titulo">
-            <img src="unlock.svg" alt="cadeado fechado"> 
-            <h2 class="titulo-principal">Gerador de senhas</h2>
-            <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
-        </div>
-        <div class="conteudo-senha">
-            <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha"/>
-        </div>
+        <section class="conteudo">
+            <div class="conteudo-titulo">
+                <img src="unlock.svg" alt="cadeado fechado"> 
+                <h2 class="titulo-principal">Gerador de senhas</h2>
+                <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
+            </div>
+            <div class="conteudo-senha">
+                <label for="senha">Senha</label>
+                <input name="senha" type="text" id="campo-senha"/>
+            </div>
+        </section>
     </body>
 </html>
+<div class="parametro-coluna__senha">
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+    </div>           	 
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Características da senha</h4>
+    </div>
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Força da senha</h4>
+    </div>
+</div>
+
+
+  
+    
+<link rel="stylesheet" href="style.css">
